- Adjusted texture placement on Arch Block trim
- Adjusted Arch GUI display to include trim
- Bugfix: fixed Stained Doors dropping two doors when broken
- Bugfix: fixed resin not dropping from spruce leaves
- Bugfix: fixed all wooden variants not breaking quickly with axe
- Bugfix: fixed some stone type variants not breaking quickly with pickaxe
- Bugfix: removed wooden wall shaped recipes to avoid conflicts with vanilla recipes (wooden walls can still be crafted in the woodcutter)
- Bugfix: fixed hitbox appearing in wrong place for Quarter Blocks with a single layer facing
- Bugfix: adjusted hitboxes for Layered Blocks to Reduce Ambient Occlusion issues

-0.1.3
- Updated Buildify Dependency Version to 0.1.3+
- Adjusted placement of Sorting Buttons when using Chest
- Bugfix: fixed issue that was preventing startup of dedicated servers
- Bugfix: fixed villagers not able to use Tall Doors

-0.2.0 - 1.20.1
- Added Forge 1.20.1 support
- Removed Sorting Buttons (are included in Buildify now)
- Removed World Gen (is included in Natures Canvas now)
- Updated translations en_us
- Added Bamboo, Bamboo Mosaic, Stripped Bamboo, Cherry, Stripped Cherry, Mangrove, Stripped Mangrove and Mud Bricks Variants
- Updated Dependencies CaliberLib -> 0.1.2. Buildify -> 0.2.3.
- Bugfix: fixed layered slab block collision shape
- Bugfix: fixed black/transparent textures on Tall Doors
- Bugfix: fixed red_sand_layer texture showing as sand
- Bugfix: fixed slab_layer removing block from inventory on placement of double_slab in Slab Mode

-0.2.1 (in progress)
- Added check for if dataGen is running
- Added Acacia, Bamboo, Birch, Dark_Oak, Jungle, Mangrove, Oak, Spruce, Crimson and Warped Roof Blocks
- Added Bamboo, Cherry and Mangrove Tall Doors
- Refactored all Tall Doors to better match naming conventions woodname_tall_door.  Sorry for any inconvenience this may cause.
- Removed deprecated BlockRenderLayers and replaced with RenderLayer setting in models




