@@ -1,10 +1,0 @@
-{
-  "conditions": [
-    {
-      "condition": "block_state_property",
-      "block": "minecraft:grass"
-    }
-  ],
-  "addition": "caliber:grass_stems",
-  "type": "caliber:grass_stems_from_grass"
-}
