@@ -1,10 +1,0 @@
-{
-  "conditions": [
-    {
-      "condition": "block_state_property",
-      "block": "minecraft:spruce_leaves"
-    }
-  ],
-  "addition": "caliber:resin",
-  "type": "caliber:resin_from_spruce_leaves"
-}
