@@ -1,4 +1,0 @@
-{
-  "type": "caliber:caliber_biome_modifier",
-  "biomes": "#minecraft"
-}
