@@ -1,7 +1,0 @@
-{
-  "replace": false,
-  "entries": [
-    "caliber:grass_stems_from_grass",
-    "caliber:resin_from_spruce_leaves"
-  ]
-}
